--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
     "koa": "^2.0.0-alpha.7",
-    "koa-router": "^7.0.1"
+    "koa-router": "^7.0.1",
+    "node-fetch": "^1.6.3"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0"
